--- a/templates/requester/request-form.html
+++ b/templates/requester/request-form.html
@@ -2,18 +2,12 @@
 {% block title%}Requester dashboard {% endblock %}
 {% block content %}
 <section class="text-gray-600 body-font relative">
-    <div class="container px-5 py-24 mx-auto">
+    <div class="container px-5 py-12 mx-auto">
       <div class="flex flex-col text-center w-full mb-12">
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Create new expense request</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify.</p>
+        {% comment %} <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify.</p> {% endcomment %}
       </div>
       
-      {% if messages %}
-        {% for message in messages %}
-          <h2>{{ message }}</h2>
-        {% endfor %}
-      {% endif %}
-
       <form class="lg:w-1/2 md:w-2/3 mx-auto" method='post'>
         {% csrf_token %}
         <div class="flex flex-wrap -m-2">
@@ -33,23 +27,20 @@
           </div>
           <div class="p-2 w-1/2">
             <div class="relative">
-              <label for="price" class="leading-7 text-sm text-gray-600">Price</label>
-              <input type="number" id="price" name="price" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              <label for="title" class="leading-7 text-sm text-gray-600">Title</label>
+              <input type="text" id="title" name="title" required class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
             </div>
           </div>
           <div class="p-2 w-1/2">
             <div class="relative">
-              <label for="title" class="leading-7 text-sm text-gray-600">Title</label>
-              <input type="text" id="title" name="title" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              <label for="price" class="leading-7 text-sm text-gray-600">Price</label>
+              <input type="number" required id="price" name="price" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
             </div>
           </div>
-
-         
-
           <div class="p-2 w-full">
             <div class="relative">
               <label for="description" class="leading-7 text-sm text-gray-600">Description</label>  
-              <textarea id="description" name="description" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+              <textarea id="description" required name="description" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
             </div>
           </div>
           
